--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #spring.application.name=ProductApp
-#server.port=8989
+server.port=8085
 spring.datasource.url=jdbc:mysql://localhost:3306/products-db?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
